@@ -134,11 +134,13 @@ static GdkPixbuf * _rsvg_handle_get_pixbuf (RsvgHandle *handle)
 	rsvg_handle_get_dimensions (handle, &dimensions);
 	rowstride = dimensions.width * 4;
 
-	pixels = g_new(guint8, dimensions.width * dimensions.height * 4);
+	pixels = g_new0(guint8, dimensions.width * dimensions.height * 4);
+
 	surface = cairo_image_surface_create_for_data (pixels,
 												   CAIRO_FORMAT_ARGB32,
 												   dimensions.width, dimensions.height,
 												   rowstride);
+
 	cr = cairo_create (surface);
 
 	rsvg_cairo_render (cr, handle);
